Fix players not showing in search

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -27,4 +27,7 @@ a.active {
    text-decoration: none;
 }
 
+.green-audio-player .slider .gap-progress .pin {
+  background-color: $color-danger;
+}
 
